--- a/employee/src/main/resources/application.yaml
+++ b/employee/src/main/resources/application.yaml
@@ -4,20 +4,6 @@ server:
 spring:
   application:
     name: employee
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: "jdbc:postgresql://localhost:5432/myapp"
-    username: postgres
-    password: go_seokbin3438
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: create
-      format_sql: true
-      jdbc:
-        lob:
-          non_contextual_creation: true
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+  config:
+    import: optional:configserver:http://localhost:8671
+
